--- a/src/com/Calculator/Resources/calculatorApp.fxml
+++ b/src/com/Calculator/Resources/calculatorApp.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <BorderPane prefHeight="500.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.Calculator.Controllers.Controllers">
@@ -63,25 +62,10 @@
                       <tabs>
                           <Tab fx:id="history" closable="false" text="History">
                               <content>
-                        <ScrollPane fx:id="historyScrollPane" fitToWidth="true" hbarPolicy="NEVER" hmax="100.0" hvalue="100.0" style="-fx-background: #121212;">
+                        <ScrollPane fx:id="historyScrollPane" fitToWidth="true" hbarPolicy="NEVER" hvalue="100.0" style="-fx-background: #121212;">
                            <content>
-                              <GridPane fx:id="historyPane" prefHeight="491.0" prefWidth="186.0" style="-fx-background-color: #121212;">
-                                <columnConstraints>
-                                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                                </columnConstraints>
-                                <rowConstraints>
-                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                </rowConstraints>
-                                 <padding>
-                                    <Insets left="10.0" right="10.0" />
-                                 </padding>
-                              </GridPane>
-                           </content>
-                        </ScrollPane>
+                              <VBox fx:id="historyVBox" depthTest="ENABLE" fillWidth="false" />
+                           </content></ScrollPane>
                               </content>
                           </Tab>
                           <Tab fx:id="memory" closable="false" text="Memory">
