--- a/src/com/Calculator/Resources/calculatorApp.fxml
+++ b/src/com/Calculator/Resources/calculatorApp.fxml
@@ -2,7 +2,7 @@
 
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<BorderPane prefHeight="500.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.Calculator.Controllers.Controllers">
+<BorderPane minHeight="625.0" minWidth="600.0" prefHeight="625.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.Calculator.Controllers.Controllers">
     <center>
         <AnchorPane prefHeight="500.0" prefWidth="484.0" BorderPane.alignment="CENTER">
             <children>
@@ -15,7 +15,9 @@
                     </columnConstraints>
                     <rowConstraints>
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -24,32 +26,32 @@
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                     <children>
-                        <Label fx:id="calFinal" alignment="CENTER_RIGHT" contentDisplay="RIGHT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="72.0" prefWidth="400.0" textAlignment="RIGHT" GridPane.columnSpan="4" />
-                        <TextField fx:id="calInput" alignment="CENTER_RIGHT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onKeyTyped="#keyTyped" GridPane.columnSpan="4" GridPane.rowIndex="1" />
-                        <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onMouseClicked="#mouseClicked" text="7" GridPane.rowIndex="4" />
-                        <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onMouseClicked="#mouseClicked" text="8" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                        <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onMouseClicked="#mouseClicked" text="9" GridPane.columnIndex="2" GridPane.rowIndex="4" />
-                        <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onMouseClicked="#mouseClicked" text="+" GridPane.columnIndex="3" GridPane.rowIndex="4" />
-                        <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onMouseClicked="#mouseClicked" text="C" GridPane.rowIndex="3" />
-                        <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onMouseClicked="#mouseClicked" text="&lt;-" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                        <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onMouseClicked="#mouseClicked" text="/" GridPane.columnIndex="2" GridPane.rowIndex="3" />
-                        <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onMouseClicked="#mouseClicked" text="*" GridPane.columnIndex="3" GridPane.rowIndex="3" />
-                        <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onMouseClicked="#mouseClicked" text="4" GridPane.rowIndex="5" />
-                        <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onMouseClicked="#mouseClicked" text="5" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-                        <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onMouseClicked="#mouseClicked" text="6" GridPane.columnIndex="2" GridPane.rowIndex="5" />
-                        <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onMouseClicked="#mouseClicked" text="-" GridPane.columnIndex="3" GridPane.rowIndex="5" />
-                        <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onMouseClicked="#mouseClicked" text="1" GridPane.rowIndex="6" />
-                        <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onMouseClicked="#mouseClicked" text="2" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-                        <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onMouseClicked="#mouseClicked" text="3" GridPane.columnIndex="2" GridPane.rowIndex="6" />
-                        <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onMouseClicked="#mouseClicked" text="=" GridPane.columnIndex="3" GridPane.rowIndex="6" />
-                        <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onMouseClicked="#mouseClicked" text="+/-" GridPane.rowIndex="7" />
-                        <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onMouseClicked="#mouseClicked" text="0" GridPane.columnIndex="1" GridPane.rowIndex="7" />
-                        <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onMouseClicked="#mouseClicked" text="ANS" GridPane.columnIndex="3" GridPane.rowIndex="7" />
-                        <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onMouseClicked="#mouseClicked" text="." GridPane.columnIndex="2" GridPane.rowIndex="7" />
-                  <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onMouseClicked="#mouseClicked" text="(" GridPane.rowIndex="2" />
-                  <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onMouseClicked="#mouseClicked" text=")" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                  <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onMouseClicked="#mouseClicked" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-                  <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onMouseClicked="#mouseClicked" GridPane.columnIndex="3" GridPane.rowIndex="2" />
+                        <Label fx:id="calFinal" alignment="CENTER_RIGHT" contentDisplay="RIGHT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="72.0" prefWidth="400.0" textAlignment="RIGHT" GridPane.columnSpan="4" GridPane.rowSpan="2" />
+                        <TextField fx:id="calInput" alignment="CENTER_RIGHT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onKeyTyped="#keyTyped" prefHeight="42.0" prefWidth="400.0" GridPane.columnSpan="4" GridPane.rowIndex="2" GridPane.rowSpan="2" />
+                        <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onMouseClicked="#mouseClicked" prefHeight="150.0" prefWidth="150.0" text="7" GridPane.rowIndex="6" />
+                        <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onMouseClicked="#mouseClicked" prefHeight="150.0" prefWidth="150.0" text="8" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                        <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onMouseClicked="#mouseClicked" prefHeight="150.0" prefWidth="150.0" text="9" GridPane.columnIndex="2" GridPane.rowIndex="6" />
+                        <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onMouseClicked="#mouseClicked" prefHeight="150.0" prefWidth="150.0" text="+" GridPane.columnIndex="3" GridPane.rowIndex="6" />
+                        <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onMouseClicked="#mouseClicked" prefHeight="150.0" prefWidth="150.0" text="C" GridPane.rowIndex="5" />
+                        <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onMouseClicked="#mouseClicked" prefHeight="150.0" prefWidth="150.0" text="&lt;-" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                        <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onMouseClicked="#mouseClicked" prefHeight="150.0" prefWidth="150.0" text="/" GridPane.columnIndex="2" GridPane.rowIndex="5" />
+                        <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onMouseClicked="#mouseClicked" prefHeight="150.0" prefWidth="150.0" text="*" GridPane.columnIndex="3" GridPane.rowIndex="5" />
+                        <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onMouseClicked="#mouseClicked" prefHeight="150.0" prefWidth="150.0" text="4" GridPane.rowIndex="7" />
+                        <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onMouseClicked="#mouseClicked" prefHeight="150.0" prefWidth="150.0" text="5" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+                        <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onMouseClicked="#mouseClicked" prefHeight="150.0" prefWidth="150.0" text="6" GridPane.columnIndex="2" GridPane.rowIndex="7" />
+                        <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onMouseClicked="#mouseClicked" prefHeight="150.0" prefWidth="150.0" text="-" GridPane.columnIndex="3" GridPane.rowIndex="7" />
+                        <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onMouseClicked="#mouseClicked" prefHeight="150.0" prefWidth="150.0" text="1" GridPane.rowIndex="8" />
+                        <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onMouseClicked="#mouseClicked" prefHeight="150.0" prefWidth="150.0" text="2" GridPane.columnIndex="1" GridPane.rowIndex="8" />
+                        <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onMouseClicked="#mouseClicked" prefHeight="150.0" prefWidth="150.0" text="3" GridPane.columnIndex="2" GridPane.rowIndex="8" />
+                        <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onMouseClicked="#mouseClicked" prefHeight="150.0" prefWidth="150.0" text="=" GridPane.columnIndex="3" GridPane.rowIndex="8" />
+                        <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onMouseClicked="#mouseClicked" prefHeight="150.0" prefWidth="150.0" text="+/-" GridPane.rowIndex="9" />
+                        <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onMouseClicked="#mouseClicked" prefHeight="150.0" prefWidth="150.0" text="0" GridPane.columnIndex="1" GridPane.rowIndex="9" />
+                        <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onMouseClicked="#mouseClicked" prefHeight="150.0" prefWidth="150.0" text="ANS" GridPane.columnIndex="3" GridPane.rowIndex="9" />
+                        <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onMouseClicked="#mouseClicked" prefHeight="150.0" prefWidth="150.0" text="." GridPane.columnIndex="2" GridPane.rowIndex="9" />
+                  <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onMouseClicked="#mouseClicked" prefHeight="150.0" prefWidth="150.0" text="(" GridPane.rowIndex="4" />
+                  <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onMouseClicked="#mouseClicked" prefHeight="150.0" prefWidth="150.0" text=")" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                  <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onMouseClicked="#mouseClicked" prefHeight="150.0" prefWidth="150.0" GridPane.columnIndex="2" GridPane.rowIndex="4" />
+                  <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onMouseClicked="#mouseClicked" prefHeight="150.0" prefWidth="150.0" GridPane.columnIndex="3" GridPane.rowIndex="4" />
                     </children>
                 </GridPane>
             </children>
